// Copyright 2018 The Chromium Authors
// Use of this source code is governed by a BSD-style license that can be
// found in the LICENSE file.

syntax = "proto3";
package form_data_fuzzer;

// The FormField message describes those data members of
// autofill::FormFieldData, which are interesting for the FormData parsing code
// being fuzzed.
message FormField {
  bool is_focusable = 1;
  string form_control_type = 2;
  string autocomplete_attribute = 3;
  string label = 4;
  string name = 5;
  string id = 6;
  string value = 7;
}

// The Form message describes those data members of autofill::FormData, which
// are interesting for the FormData parsing code being fuzzed.
message Form {
  bool is_mode_filling = 1;
  bool is_form_tag = 2;
  string name = 4;
  string action = 5;
  string origin = 6;
  string main_frame_origin = 7;
  string id = 9;
  repeated FormField fields = 8;
}
